# vala-panel-extras

applets/: CMakeLists.txt
applets/gtop/: gtop.vala
applets/weather/: weather-config.vala
applets/weather/ui/: config.ui
applets/xkb/: CMakeLists.txt  xkb-backend.vala
cmake/: .gitlab-ci.yml  CMakeLists.txt  README.md  VCMConfig.cmake.in  VCMSubmodule.cmake
cmake/Find/: FindBAMF.cmake  FindPEAS.cmake  FindWNCK.cmake  FindX11.cmake
cmake/GLib/: GLibProgramHandlers.cmake
cmake/GitVersion/: GitVersion.cmake
cmake/Utility/: Translations.cmake
lib/: CMakeLists.txt  application.vala  generic-config-dialog.h
vala-panel-extras/: .gitlab-ci.yml
vala-panel-extras/applets/batt/: battery.vala
vala-panel-extras/applets/volume/: volume.vala
vala-panel-extras/applets/xkb/: xkb-config.vala  xkb-xcb-backend.c
vala-panel-extras/lib/: configurator.vala  generic-config-dialog.c
vala-panel-extras/po/: vala-panel-extras.pot
